--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.19.1",
+    "next": "14.0.1",
+    "next-sanity": "^5.5.10",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "sanity": "^3.19.1",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.96",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "typescript": "^5"
   }
 }
