--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "sanity": "^3.19.1",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
@@ -35,6 +36,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/nodemailer": "^6.4.11"
   }
 }
