--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "next": "14.0.1",
     "next-sanity": "^5.5.10",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-toastify": "^9.1.3",
     "sanity": "^3.19.1",
-    "styled-components": "^6.1.1",
-    "nodemailer": "^6.9.4"
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.96",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -36,7 +39,6 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "@types/nodemailer": "^6.4.11"
+    "typescript": "^5"
   }
 }
