--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.11",
+    "@sanity/code-input": "^4.1.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.19.1",
     "axios": "^1.6.2",
@@ -19,10 +20,13 @@
     "next-sanity": "^5.5.10",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.4",
+    "prism-react-renderer": "^2.3.1",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-refractor": "^2.1.7",
     "react-toastify": "^9.1.3",
     "sanity": "^3.19.1",
     "styled-components": "^6.1.1"
@@ -34,6 +38,7 @@
     "@types/nodemailer": "^6.4.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/refractor": "^3.4.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
