--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "next": "14.0.1",
-    "next-sanity": "^5.5.10",
+    "next-sanity": "^5.5.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.4",
     "prism-react-renderer": "^2.3.1",
@@ -29,6 +29,7 @@
     "react-refractor": "^2.1.7",
     "react-toastify": "^9.1.3",
     "sanity": "^3.19.1",
+    "@sanity/client": "^6.4.9",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
